🚀 Deploy: 1차 연동 배포
* ♻️Refactor: S3 파일 업로드 기능 리팩토링

* :memo:Docks: Issue labels 문서 추가

* :wrench:Settings: 소셜 로그인 시 리프레시 토큰 발급 추가

* :recycle:Refactor: 서버 이미지 업로드 기능 삭제

* :recycle:Refactor: S3 파일 업로드 기능 리팩토링

* :wrench:Settings: 파일 업로드 폴더 변경 및 크기 설정

* :recycle:Refactor: 코드 포맷 적용

* :sparkles: Feat: 작품, 작품 디테일 컷 도메인 추가 및 관련 기능 구축

* :sparkles: Feat: 작품 관련 도메인 추가 및 기능 구축

* :sparkles: Feat: 작품 디테일컷 도메인 추가 및 관련 기능 구축

* :recycle: Refactor: 유저-작품 연관관계 매핑

* :recycle: Refactor: Piece 기능 리팩토링

* :recycle: Refactor: PieceDetail 기능 리팩토링

* :sparkles: Feat: add s3 path piece-detail

* :recycle: Refactor: PieceController 구현체 생성 및 구현

* :recycle: Refactor: Piece DTO 수정

* :recycle: Refactor: Piece 엔티티 수정 및 Status Enum 업데이트

* :sparkles: Feat: Piece 커스텀 에러 추가

* :recycle: Refactor: Piece Mapper 수정

* :recycle: Refactor: Piece Service 구현체 생성 및 구현

* :recycle: Refactor: PieceDetail Mapper 수정

* :recycle: Refactor: PieceDetail Service 구현체 생성 및 구현

* :sparkles: Feat: PieceDetail 요약 응답 DTO 추가

* :recycle: Refactor: 유저 작품 추가 메서드 추가

* :recycle: Refactor: S3 path 추가

* :sparkles: Feat: Add S3 path

* :recycle: Refactor: PR 리뷰 기반 코드 리팩토링

* :recycle: Refactor: PR 리뷰 기반 코드 리팩토링

* :recycle: Refactor: Spotless 코드 포맷팅 적용

* :recycle:Refactor: 이미지 경로 추가(EXHIBITION)

* :card_file_box:Comment: 불필요한 주석 제거

* :recycle:Refactor: 이미지 경로 추가(EXHIBITION)

* :sparkles:Feat: 페이지 공통 응답 객체 생성

* :sparkles: Feat: 작품 좋아요 관련 기능 추가

* :gear: Settings: 서브모듈 업데이트

* :recycle: Refactor: 작품 관련 기능 리팩토링

* :recycle: Refactor: 작품 디테일 엔티티 제약 조건 추가

* :recycle: Refactor: 유저 엔티티 리팩토링(불필요 메서드 제거)

* :recycle: Refactor: PR 코드 리뷰 반영 리팩토링

* :recycle: Refactor: spotless CI 해결

* :recycle:Refactor: 토큰 응답 DTO 추가

* :recycle:Refactor: 자체 로그인 로직 수정

* :recycle:Refactor: Exhibition 매핑 테이블 연결

* :sparkles:Feat: 사용자 조회 로직 추가

* :wrench:Settings: 토큰 헤더 지정 추가

* :wrench:Settings: 불필요한 코드 제거

* :recycle:Refactor: 전체 로직 수정

* :recycle:Refactor: 메소드명 변경

* :recycle:Refactor: 쿠키에 토큰 삽입 로직 추가

* :sparkles:Feat: Exhibition 기능 1차 com